--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
-body {
-  margin: 0;
+
+#root{
+  background-color: #3bc31f;
+  padding: 20px 0 20px 0;
+  text-align: center;
+  max-width: 500px;
+}
+
+li{
+  list-style: none;
+  padding: 5px;
+  border-bottom: solid black;
+}
+
+.myList{
   padding: 0;
-  font-family: sans-serif;
+}
+
+ul input, span, button{
+  margin: 0 5px 0 5px;
+
 }
